Pre github commit

--- a/views/adminClients.pug
+++ b/views/adminClients.pug
@@ -23,7 +23,7 @@ block content
         div.col-4
             input.form-control#name_input(name="client_name", type="text", placeholder="Имя, Фамилия", required)
         div.col-4
-            input.form-control#phone_input(name="client_phone", type="text", placeholder="Телефон", required)
+            input.form-control.phone_input#phone_input(name="client_phone", type="text", placeholder="Телефон", required)
         div.col-4
             button.btn.btn-primary.mb-2(type="submit") Добавить клиента
     if errors 
