--- a/views/adminLogIn.pug
+++ b/views/adminLogIn.pug
@@ -17,11 +17,6 @@ block login
                             div.input-group-addon(style="width: 2.6rem")
                                 i.fa.fa-user
                             input.form-control#username(type="text",name="username",placeholder="Имя пользователя...",required, autofocus)
-                div.col-md-3
-                    div.form-control-feedback
-                        span.text-danger.align-middle
-                            i.fa.fa-close 
-                            |Example error message
             div.row
                 div.col-md-3
                 div.col-md-6
@@ -31,14 +26,13 @@ block login
                             div.input-group-addon(style="width: 2.6rem")
                                 i.fa.fa-key
                             input.form-control#password(type="password", name="password", placeholder="Пароль...",required)
-                div.col-md-3
-                    div.form-control-feedback
-                        span.text-danger.align-middle
-                            i.fa.fa-close 
-                            |Example error message
             div.row(style="padding-top: 1rem")
                 div.col-md-3
                 div.col-md-6
                     button.btn.btn-success(type="submit")
                         i.fa.fa-sign-in 
                             | Войти
+    if errors 
+        ul
+        for error in errors
+            li!= error.msg
