--- a/views/adminLayout.pug
+++ b/views/adminLayout.pug
@@ -13,6 +13,7 @@ html
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js")
     script(src="/javascripts/jquery.mask.min.js")
     script(src="/javascripts/adminscripts.js")
+    script(src="/javascripts/jquery.autocomplete.js")
   body
     if user
         a.btn.btn-light(href="/admin/week/1",role="button") Текущая
