--- a/views/adminWeek.pug
+++ b/views/adminWeek.pug
@@ -77,7 +77,7 @@ block content
                                     th(scope="col")
                             tbody#member_list
                         .form-group.col-md-12
-                            input.form-control.new_mem_input(type="text", placeholder="Имя, Фамилия", name="new_mem", value="")
+                            input.form-control.new_mem_input.autocomplete-name(type="text", placeholder="Имя, Фамилия", name="new_mem", value="")
                         .form-group.col-md-12
                             input.form-control.phone_input(type="text", placeholder="Телефон", name = "new_mem_phone", value="")
                         .form-group.col-md-2
